css/style.css
html, body {
    height: 100%;
    padding-top: 20px;
    padding-bottom: 18px;
    background-color: #c9c9c9;
    overflow: hidden;
}

.border-10 {
    border-width:10px !important;
}

@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons'),
      local('MaterialIcons-Regular'),
      url(../fonts/MaterialIcons-Regular.woff2) format('woff2')
  }

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 20px;  /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    vertical-align: text-bottom;
    direction: ltr;
    padding-bottom: 0px;
  
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
  }
.inner {
    position: absolute;
    width: 100%;
}

